--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ script: mvn clean package -DskipTests=true
 deploy:
     provider: elasticbeanstalk
     region: "ap-south-1"
-    app: "teensy-server"
-    env: "TeensyServer-env"
+    app: "teensy-api"
+    env: "TeensyApi-env"
     bucket_name: "elasticbeanstalk-ap-south-1-509006680370"
-    bucket_path: "teensy-server"
+    bucket_path: "teensy-api"
     edge: true
     on:
         branch: master
