--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -210,9 +216,6 @@
 							<generatorName>spring</generatorName>
 							<apiPackage>io.tej.SwaggerCodgen.api</apiPackage>
 							<modelPackage>io.tej.SwaggerCodgen.model</modelPackage>
-							<supportingFilesToGenerate>
-								ApiUtil.java
-							</supportingFilesToGenerate>
 							<configOptions>
 								<sourceFolder>src/main/java/</sourceFolder>
 								<delegatePattern>true</delegatePattern>
